# logmap-llm

./: .gitignore  README.md  TODOs.md  bridging.py  clear_owlready2_cache.py  constants.py  convert_oaei_rdf_to_tsv.py  dedicated_stage_two_script.py  developer_prompts.py  evaluate.py  example_anatomy_config.toml  example_conference_config.toml  example_kg_config.toml  explore_python_to_logmap_via_jpype.ipynb  few_shot_examples.py  log_utils.py  logmap-llm-config-basic.toml  logmap-llm-config-expert.toml  logmap-llm.toml  logmap-log.out  logmap_llm.ipynb  logmap_llm.py  logmap_llm_rework.md  onto_access.py  onto_object.py  oracle_consultation.py  oracle_consultation_managers.py  oracle_prompt_building.py  oracle_user_prompt_templates.py  prompt_utils.py  pyproject.toml  run_local_llms.md  sibling_retrieval.py
configs/: init_test_config.toml
docs/: WiP_docs.md
logmap/: parameters.txt
scripts/: clear_owlready2_cache.py
src/logmap-llm/config/: schema.py
src/logmap-llm/ontology/: entities.py
src/logmap-llm/oracle/: manager.py
src/logmap-llm/pipeline/: logmap_interface.py  paths.py  steps.py  types.py
src/logmap_llm/: __main__.py  bridging.py  constants.py  interface.py  log_utils.py
src/logmap_llm/config/: loader.py  schema.py
src/logmap_llm/evaluation/: evaluate.py  harness.py  io.py  metrics.py
src/logmap_llm/ontology/: access.py  cache.py  entities.py  object.py  sibling_retrieval.py  vocabularies.py
src/logmap_llm/oracle/: consultation.py  manager.py
src/logmap_llm/pipeline/: cli.py  context.py  contracts.py  data_utils.py  logmap_interface.py  (+7 more)
(+15 files in other folders)
